[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "Python 3 environment for data analysis"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.1"
ipython = "^7.16"
ipykernel = "^5.3"
matplotlib = "^3.2"
numpy = "^1.19.3"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"
scipy = "^1.5.3"
tqdm = "^4.41"
xarray = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
